[gd_scene load_steps=6 format=2]

[ext_resource path="res://screens/check_internet_connection.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/chewy_font_small.tres" type="DynamicFont" id=2]
[ext_resource path="res://textures/network.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/chewy_font_small_green_and_outlines.tres" type="DynamicFont" id=4]

[sub_resource type="Animation" id=1]
resource_name = "rotate"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Animation/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -360.0, 360.0 ]
}

[node name="CheckInternetConnection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRectBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.121569, 0, 0.2, 1 )

[node name="lblTitle" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1915.0
margin_right = -240.0
margin_bottom = 1048.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "CheckInternetConnection_lblTitle"
align = 2
valign = 2

[node name="Animation" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite" type="Sprite" parent="Animation"]
position = Vector2( -57, -55.9999 )
rotation = -6.28319
scale = Vector2( 0.810587, 0.824733 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/rotate = SubResource( 1 )

[node name="btnTryAgain" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -140.0
margin_right = 827.0
margin_bottom = -30.0
custom_fonts/font = ExtResource( 2 )
text = "TryAgain"

[node name="btnJustPractise" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -827.0
margin_top = -140.0
margin_right = -40.0
margin_bottom = -30.0
custom_fonts/font = ExtResource( 2 )
text = "JustPractise"

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="btnTryAgain" to="." method="_on_btnTryAgain_pressed"]
[connection signal="pressed" from="btnJustPractise" to="." method="_on_btnJustPractise_pressed"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
